fixed certain images not showing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,17 +5,12 @@
 
 body {
   margin: 0;
-  background: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(101, 100, 100) 58%, rgb(1, 1, 1) 100%);
 
 }
 
-.button{
-  border-radius: 15%;
-
-}
 
 .popular-movies-text{
-  color: white;
+  color: black;
 }
 
 .popular-movies-text {
@@ -47,17 +42,17 @@ body {
 }
 
 .nav {
-  background-color: #333;
-  color: white;
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
   padding: 0 1rem;
+  
 }
 
 .site-title {
-  font-size: 2rem;
+  font-size: 2.3rem;
 }
 
 .nav ul {
@@ -77,10 +72,3 @@ body {
   padding: .75rem;
 }
 
-.nav li.active {
-  background-color: #555;
-}
-
-.nav li:hover {
-  background-color: #818181;
-}
